[package]
authors = ["Mark Sinclair <mark.edward.x@gmail.com>"]
name = "torus"
version = "0.1.0"
description = "A simple CLI application to keep track of what you are reading"
license = "GPL-3.0-only"
keywords = ["CLI", "documents"]
categories = ["command-line-utilities", "visualization"]
homepage = "https://github.com/MarkJr94/torus"
repository = "https://github.com/MarkJr94/torus"

[dependencies]
clap = "^2"
cmdline-parser = "0.1.0"
error-chain = "0.10.0"
linefeed = "~0.2.3"
prettytable-rs = "^0.6"
rusqlite = "0.11.0"
time = "0.1.36"
xdg = "^2.1"
